--- a/tfg-frontend/src/main/resources/templates/home.html
+++ b/tfg-frontend/src/main/resources/templates/home.html
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <a th:href="@{/frontend/verReserva}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
+            <a th:href="@{/frontend/verReserva}"><img src="/img/view-reserve-img.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
                 <h5>Ver reservas</h5>
                 <p>Ve tus reservas actuales.</p>
@@ -84,7 +84,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <a th:href="@{/frontend/miembroclub}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
+            <a th:href="@{/frontend/miembroclub}"><img src="/img/club-img.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
                 <h5>Club Fun</h5>
                 <p>Apúntate al Club Fun y recibe ofertas en tu correo.</p>
