--- a/tfg-frontend/src/main/resources/templates/paginas/incidencias.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/incidencias.html
@@ -84,7 +84,7 @@
                             <td th:text="${incidencia.id}"></td>
                             <td th:text="${incidencia.descripcion}"></td>
                             <td>
-                                <a th:href="@{/frontend/cerrarIncidencia/{id}  (id=${incidencia.id})   }" th:text="'cerrar'" onclick="return confirm('¿Estas seguro?')" class="btn button-custom-colors" role="button" title="Cerrar la incidencia."><i class="fas fa-trash" aria-hidden="true"></i></a>
+                                <a th:href="@{/frontend/cerrarIncidencia/{id}  (id=${incidencia.id})   }" th:text="'cerrar'" onclick="return confirm('¿Estás seguro?')" class="btn button-custom-colors" role="button" title="Cerrar la incidencia."><i class="fas fa-trash" aria-hidden="true"></i></a>
                             </td>
                         </tr>
 
