--- a/tfg-frontend/src/main/resources/templates/paginas/reservaCliente.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/reservaCliente.html
@@ -73,7 +73,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-lg-6">
-      <a th:href="@{/frontend/eliminarReserva}" th:text="'Cancelar reserva'" onclick="return confirm('¿Estas seguro?')" class="btn button-custom-colors-accent d-block" role="button" title="eliminar de la reserva."><i class="fas fa-trash" aria-hidden="true"></i></a>
+      <a th:href="@{/frontend/eliminarReserva}" th:text="'Cancelar reserva'" onclick="return confirm('¿Estás seguro?')" class="btn button-custom-colors-accent d-block" role="button" title="eliminar de la reserva."><i class="fas fa-trash" aria-hidden="true"></i></a>
     </div>
   </div>
 </div>
