--- a/tfg-frontend/src/main/resources/templates/paginas/turnosEmpleados.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/turnosEmpleados.html
@@ -112,7 +112,7 @@
                                 <td th:text="${turno.getHoraEntrada()}"></td>
                                 <td th:text="${turno.getHoraSalida()}"></td>
                                 <td>
-                                    <a th:href="@{/frontend/eliminarTurno/{id}  (id=${turno.id})   }" th:text="'eliminar'" onclick="return confirm('¿Estas seguro?')" class="btn btn-warning" role="button" title="Eliminar turno."><i class="fas fa-trash" aria-hidden="true"></i></a>
+                                    <a th:href="@{/frontend/eliminarTurno/{id}  (id=${turno.id})   }" th:text="'eliminar'" onclick="return confirm('¿Estás seguro?')" class="btn btn-warning" role="button" title="Eliminar turno."><i class="fas fa-trash" aria-hidden="true"></i></a>
                                 </td>
                             </tr>
                             </tbody>
