--- a/tfg-frontend/src/main/resources/templates/paginas/atraccionesLista.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/atraccionesLista.html
@@ -81,7 +81,7 @@
                     <td th:text="${atraccion.precio}"></td>
                     <td>
                         <a th:href="@{/frontend/atraccionesEditar/{id}  (id=${atraccion.id})   }" th:text="'Editar'" class="btn button-custom-colors" role="button" title="editar sitio"><i class="fas fa-trash" aria-hidden="true"></i></a>
-                        <a th:href="@{/frontend/atraccionesEliminar/{id}  (id=${atraccion.id})   }" th:text="'Eliminar'" onclick="return confirm('¿Estas seguro?. Se borrarán también todas las actividades de reservas asociadas a esta atracción.')" class="btn button-custom-colors-accent" role="button" title="eliminar sitio"><i class="fas fa-trash" aria-hidden="true"></i></a>
+                        <a th:href="@{/frontend/atraccionesEliminar/{id}  (id=${atraccion.id})   }" th:text="'Eliminar'" onclick="return confirm('¿Estás seguro?. Se borrarán también todas las actividades de reservas asociadas a esta atracción.')" class="btn button-custom-colors-accent" role="button" title="eliminar sitio"><i class="fas fa-trash" aria-hidden="true"></i></a>
                     </td>
                 </tr>
 
