--- a/tfg-frontend/src/main/resources/templates/paginas/infoEmpresa.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/infoEmpresa.html
@@ -50,7 +50,7 @@
     <h1 class="text-center mb-4">Sobre nosotros</h1>
     <div class="row align-items-center">
         <div class="col-lg-6">
-            <img src="https://via.placeholder.com/600x400" class="img-fluid img-shadow" alt="Placeholder Image">
+            <img src="/img/mission-img.png" class="img-fluid img-shadow" alt="Placeholder Image">
         </div>
         <div class="col-lg-6">
             <h2>¿Quiénes Somos?</h2>
@@ -60,7 +60,7 @@
 
     <div class="row align-items-center mt-5">
         <div class="col-lg-6 order-lg-2">
-            <img src="https://via.placeholder.com/600x400" class="img-fluid img-shadow" alt="Placeholder Image">
+            <img src="/img/family-img.png" class="img-fluid img-shadow" alt="Placeholder Image">
         </div>
         <div class="col-lg-6 order-lg-1">
             <h2>Nuestra Misión</h2>
@@ -70,7 +70,7 @@
 
     <div class="row align-items-center mt-5">
         <div class="col-lg-6">
-            <img src="https://via.placeholder.com/600x400" class="img-fluid img-shadow" alt="Placeholder Image">
+            <img src="/img/exp-img.png" class="img-fluid img-shadow" alt="Placeholder Image">
         </div>
         <div class="col-lg-6">
             <h2>Nuestra Experiencia</h2>
@@ -80,7 +80,7 @@
 
     <div class="row align-items-center mt-5">
         <div class="col-lg-6 order-lg-2">
-            <img src="https://via.placeholder.com/600x400" class="img-fluid img-shadow" alt="Placeholder Image">
+            <img src="/img/quality-img.png" class="img-fluid img-shadow" alt="Placeholder Image">
         </div>
         <div class="col-lg-6 order-lg-1">
             <h2>Compromiso con la Calidad</h2>
@@ -90,7 +90,7 @@
 
     <div class="row align-items-center mt-5">
         <div class="col-lg-6">
-            <img src="https://via.placeholder.com/600x400" class="img-fluid img-shadow" alt="Placeholder Image">
+            <img src="/img/community-img.png" class="img-fluid img-shadow" alt="Placeholder Image">
         </div>
         <div class="col-lg-6">
             <h2>Nuestra Comunidad</h2>
@@ -100,7 +100,7 @@
 
     <div class="row align-items-center mt-5">
         <div class="col-lg-6 order-lg-2">
-            <img src="https://via.placeholder.com/600x400" class="img-fluid img-shadow" alt="Placeholder Image">
+            <img src="/img/fun-img.png" class="img-fluid img-shadow" alt="Placeholder Image">
         </div>
         <div class="col-lg-6 order-lg-1">
             <h2>Únete a la Diversión</h2>
