--- a/tfg-frontend/src/main/resources/templates/paginas/verReservasEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/verReservasEmpleado.html
@@ -61,7 +61,27 @@
 </div>
 <div th:if="${!actividadesFecha.isEmpty()}" class="container mt-5">
     <h2 class="text-center fw-bold py-3" th:text="'Reservas del día ' + ${fechaSeleccionada}"></h2>
-    <div class="row justify-content-center">
+    <div class="card my-3" th:each="reserva : ${reservasFecha}">
+        <div class="card-body card-custom-colors">
+            <p class="text-center" th:text="'Nombre: ' + ${reserva.getNombreContacto()}"></p>
+            <p class="text-center" th:text="'Personas: ' + ${reserva.getPersonas()}"></p>
+            <table class="table table-bordered table-custom-secondary">
+                <thead class="thead-light">
+                <tr>
+                    <th scope="col">Actividad</th>
+                    <th scope="col">Sesión</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="actividad : ${actividadesFecha}" th:if="${actividad.getReservaID().getId() == reserva.getId()}">
+                    <td th:text="${actividad.getAtraccionID().getNombre()}"></td>
+                    <td th:text="${actividad.getId().getSesion()}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <!--<div class="row justify-content-center">
         <div class="col-lg-10">
             <table class="table table-bordered table-custom">
                 <thead class="thead-light">
@@ -80,7 +100,7 @@
                 </tbody>
             </table>
         </div>
-    </div>
+    </div>-->
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
